# dolce-gusto-coupons

./: README.md  pyproject.toml  requirements.txt
coupons/: data.csv
src/: coupons.py  main.py  secrets.py  services.py
src/services/: api.py  browser.py
