[tool.poetry]
name = "dolce-gusto-coupons"
version = "0.1.0"
description = ""
authors = ["Adilson Pavan <adilson.pavan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^3.141.0"
pytesseract = "^0.3.4"
colorama = "^0.4.3"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
